# pyai

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
src/nicestreams/: __init__.py  vercel.json  what.txt
src/nicestreams/templates/: index.html
tests/: __init__.py
